# hw-2-AdvC-2022-Spring

./: CMakeLists.txt  Makefile  README.md  code_cov.sh  main.c  run_linters.sh
.github/workflows/: ci.yml
array_lib/: CMakeLists.txt  array.c  array.h
find_max_incr_sequence_lib/: CMakeLists.txt  array.c  array.h  max_seq.c  max_seq.h  max_seq_multiproc.c  max_seq_multiproc.h  max_seq_singleproc.c  max_seq_singleproc.h
find_max_incr_sequence_lib/array_lib/: CMakeLists.txt  array.c  array.h
tests/: CMakeLists.txt  tests.cpp  utils.cpp  utils.h  utils.hpp
